<resources>
    <string name="app_name">Eat App</string>
    <string name="subtitle_bold">Quick Action</string>
    <string name="good_morning">Good Morning</string>
    <string name="username">Miluska R.</string>
    <string name="recomedaciones">Recomedaciones:</string>
    <string name="hamburguer">hamburguer</string>
    <string name="chicken">chicken</string>
    <string name="drink">drink</string>
    <string name="pizza">pizza</string>
    <string name="menu">menu</string>
    <string name="price">$ 50</string>
    <string name="item_name">Pasta</string>
    <string name="item_time">40 min</string>
    <string name="item_image">tallarin</string>
    <string name="add_to_cart">add to cart</string>
    <string name="Quickhamburguer">Hamburguer</string>
    <string name="section_chicken">Chicken</string>
    <string name="section_drink">Drink</string>
    <string name="section_pizza">Pizza</string>
    <string name="see_more">See More</string>
    <string name="local">local</string>
    <string name="larco">Larco</string>
    <string name="_40_min">40 min</string>
    <string name="restorbar_app">Eat 24 7</string>
    <string name="la_mejor_comida_criolla_del_per">La mejor comida criolla del Perú.</string>
    <string name="ingresar">Ingresar</string>
    <string name="restaurante">restaurante</string>
    <string name="logo_store_eat_24_7">logo store eat 24 7</string>
    <string name="my_cart">My Cart</string>
    <string name="toda">TODO</string>
    <string name="easy_spanish_chiken">Easy Spanish Chiken</string>
    <string name="_10_00">$10.00</string>
    <string name="_52_000">$52.00</string>
    <string name="inicio">Inicio</string>
    <string name="categorias">Categorías</string>
    <string name="perfil">Perfil</string>
    <string name="locales">Locales</string>
    <string name="carrito">Carrito</string>
    <string name="salir">Salir</string>
    <string name="hamburguesas">Hamburguesas</string>
    <string name="pizzas">Pizzas</string>
    <string name="bebidas">Bebidas</string>
    <string name="pollo">Pollo</string>
    <string name="promociones">Promociones</string>
    <string name="discount">Discount</string>
    <string name="item_total">Item Total</string>
    <string name="_62_00">$62.00</string>
    <string name="free">FREE</string>
    <string name="change">CHANGE</string>
    <string name="deliver_at_home">Deliver at :Home</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="notification">notification</string>
    <string name="location">location</string>
    <string name="returntext">returnText</string>
    <string name="_20_00">$20.00</string>
    <string name="easy_spanish_chicken">Easy Spanish Chicken</string>
    <string name="_1">1</string>
    <string name="title_food">title food</string>
    <string name="less">less</string>
    <string name="food_image">food image</string>
    <string name="more">more</string>
    <string name="resumen_de_compra">Resumen de compra</string>
    <string name="nosotros">Nosotros</string>
    <string name="lorem_nosotros_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="team">Team</string>
    <string name="lorem_person_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="imagenlocal">imagenLocal</string>
    <string name="persona">persona</string>
    <string name="nosotros_title">Nosotros</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ingresa_tus_datos_para_continuar">Ingresa tus datos para continuar</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="ingresarLogin">INGRESAR</string>
    <string name="registrarseLogin">REGISTRARSE</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="nombre">Nombre</string>
    <string name="direcci_n">Dirección</string>
    <string name="e_mail">E-mail</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="image_avatar">image avatar</string>
    <string name="capacidad">Capacidad:</string>
    <string name="jr_larco_333">Jr Larco 333</string>
    <string name="_40">40</string>
    <string name="pollito_con_papas">Pollito con papas</string>
    <string name="plato">Plato</string>
    <string name="product_image">product image</string>
    <string name="cart_image">cart image</string>
    <string name="nav_listados">nav_listados</string>
    <string name="consultas">Consultas</string>
    <string name="listados">Listados</string>
    <string name="nombres">Nombres:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="cargo">Cargo:</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="id">ID:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mariana">Mariana</string>
    <string name="miluska">Miluska</string>
    <string name="josemaria">Josemaria</string>
    <string name="title_activity_cash">CashActivity</string>
    <string name="tab_registro">REGISTRO</string>
    <string name="tab_reporte">REPORTE</string>
    <string name="tab_ingreso">INGRESO</string>
    <string name="tab_gasto">GASTO</string>
    <string name="nav_caja">nav_caja</string>
</resources>