<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_perfil"
        android:title="@string/perfil" />
    <item
        android:id="@+id/nav_nosotros"
        android:title="@string/nosotros"></item>
    <item android:title="@string/consultas">
        <menu>
            <item
                android:id="@+id/nav_listados"
                android:title="@string/listados" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_recomendaciones"
        android:title="@string/recomendaciones" />
    <item
        android:id="@+id/nav_locales"
        android:title="@string/locales" />
    <item
        android:id="@+id/nav_caja"
        android:icon="@drawable/ic_canasta"
        android:title="@string/nav_caja"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_carrito"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/carrito"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_salir"
        android:title="@string/salir" />
</menu>