<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingCart">

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/change"
        android:textColor="@color/red_design"
        app:layout_constraintBottom_toBottomOf="@+id/textView45"
        app:layout_constraintEnd_toEndOf="@+id/textView43"
        app:layout_constraintTop_toTopOf="@+id/textView45" />

    <Button
        android:id="@+id/btnConfirmOrder"
        android:layout_width="380dp"
        android:layout_height="55dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/red_design"
        android:fontFamily="@font/proximanovasemibold"
        android:text="@string/confirm_order"
        android:textAlignment="textStart"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <Button
        android:id="@+id/button7"
        android:layout_width="44dp"
        android:layout_height="48dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/red_design"
        app:icon="@drawable/ic_canasta"
        app:layout_constraintBottom_toBottomOf="@+id/btnConfirmOrder"
        app:layout_constraintEnd_toEndOf="@+id/btnConfirmOrder"
        app:layout_constraintTop_toTopOf="@+id/btnConfirmOrder" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/location"
        app:layout_constraintStart_toStartOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/textView35"
        app:srcCompat="@drawable/localizacion" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/deliver_at_home"
        android:textColor="@color/black_design"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/item_total"
        app:layout_constraintStart_toStartOf="@+id/cart_recycler"
        app:layout_constraintTop_toBottomOf="@+id/cart_recycler" />

    <TextView
        android:id="@+id/textView41"
        style="@style/cuenta_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_00"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="@+id/cart_recycler"
        app:layout_constraintTop_toTopOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/discount"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="@+id/textView44"
        app:layout_constraintTop_toTopOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView44"
        style="@style/cuenta_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_62_00"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView42"
        app:layout_constraintEnd_toEndOf="@+id/textView41"
        app:layout_constraintTop_toTopOf="@+id/textView42" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/delivery_fee"
        android:textColor="@color/teal_700"
        app:layout_constraintStart_toStartOf="@+id/textView42"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />

    <TextView
        android:id="@+id/tituloCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/resumen_de_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/resumeCart" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recycler"
        android:layout_width="371dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloCart">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>