<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="418dp"
        android:layout_height="150dp"
        android:background="@color/red_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/greeting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/good_morning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/titulo_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        android:textAppearance="@style/titulo_bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        style="@style/subtitle_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_bold"
        android:textAppearance="@style/subtitle_bold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <ImageButton
        android:id="@+id/btnHamburguer"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/hamburguer"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/hamburguer"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/btnChicken"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/hamburguer" />

    <ImageButton
        android:id="@+id/btnChicken"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/chicken"
        android:backgroundTint="#2D2F31"
        android:contentDescription="@string/chicken"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/btnHamburguer"
        app:layout_constraintEnd_toStartOf="@+id/btnDrink"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnHamburguer"
        app:layout_constraintTop_toTopOf="@+id/btnHamburguer"
        app:srcCompat="@drawable/chicken" />

    <ImageButton
        android:id="@+id/btnDrink"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/chicken"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/drink"
        android:scaleType="centerInside"
        android:src="@drawable/chicken"
        app:layout_constraintBottom_toBottomOf="@+id/btnChicken"
        app:layout_constraintEnd_toStartOf="@+id/btnPizza"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnChicken"
        app:layout_constraintTop_toTopOf="@+id/btnChicken" />

    <ImageButton
        android:id="@+id/btnPizza"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/pizza"
        android:backgroundTint="#3C3F41"
        android:contentDescription="@string/pizza"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/btnDrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDrink"
        app:layout_constraintTop_toTopOf="@+id/btnDrink"
        app:srcCompat="@drawable/pizza" />

    <TextView
        android:id="@+id/textView4"
        style="@style/section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/recomedaciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        style="@style/subtitle_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/Quickhamburguer"
        android:textAppearance="@style/subtitle_icon"
        app:layout_constraintEnd_toEndOf="@+id/btnHamburguer"
        app:layout_constraintStart_toStartOf="@+id/btnHamburguer"
        app:layout_constraintTop_toBottomOf="@+id/btnHamburguer" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="9dp"
        android:text="@string/section_chicken"
        android:textAppearance="@style/subtitle_icon"
        app:layout_constraintEnd_toEndOf="@+id/btnChicken"
        app:layout_constraintStart_toStartOf="@+id/btnChicken"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_drink"
        android:textAppearance="@style/subtitle_icon"
        app:layout_constraintEnd_toEndOf="@+id/btnDrink"
        app:layout_constraintStart_toStartOf="@+id/btnDrink"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section_pizza"
        android:textAppearance="@style/subtitle_icon"
        app:layout_constraintEnd_toEndOf="@+id/btnPizza"
        app:layout_constraintStart_toStartOf="@+id/btnPizza"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recommendation_recycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        style="@style/see_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/see_more"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/locales"
        android:textAppearance="@style/section_title"
        app:layout_constraintStart_toStartOf="@+id/recommendation_recycler"
        app:layout_constraintTop_toBottomOf="@+id/recommendation_recycler" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/see_more"
        android:textAppearance="@style/see_more"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stores_recycle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/recommendation_recycler"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>