<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="128dp"
        android:layout_height="104dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/product_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/itemone" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/plato"
        android:textAppearance="@style/titulo_bold"
        android:textColor="@color/black_design"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/item_image"
        app:layout_constraintTop_toTopOf="@+id/item_image" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:text="@string/pollito_con_papas"
        android:textAlignment="viewStart"
        android:textAppearance="@style/subtitle_bold"
        android:textColor="@color/gray_design"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/item_name"
        app:layout_constraintTop_toBottomOf="@+id/item_name" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/proximanovabold"
        android:textColor="@color/red_design"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        tools:text="@string/price" />

    <ImageButton
        android:id="@+id/item_cart"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/ic_cart"
        android:contentDescription="@string/cart_image"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/item_price"
        app:layout_constraintEnd_toEndOf="@+id/item_price" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="#FFEB3B"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/item_description"
        app:layout_constraintTop_toBottomOf="@+id/item_description" />

    <TextView
        android:id="@+id/item_noUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_40_min"
        app:layout_constraintBottom_toBottomOf="@+id/item_image"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>