<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/frameLayout3"
android:layout_width="match_parent"
android:layout_height="wrap_content"
tools:context=".fragments.JosemariaFragment">


<TextView
    android:id="@+id/textView20"
    style="@style/nombresNosotros"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:fontFamily="@font/proximanovabold"
    android:text="@string/josemaria"
    android:textColor="@color/black_design"
    android:textSize="14sp"
    app:layout_constraintStart_toStartOf="@+id/textView19"
    app:layout_constraintTop_toBottomOf="@+id/textView19" />

<TextView
    android:id="@+id/textView19"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:fontFamily="@font/proximanovabold"
    android:text="@string/team"
    android:textColor="@color/red_design"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<ImageView
    android:id="@+id/imageView10"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_marginTop="20dp"
    android:contentDescription="@string/persona"
    android:scaleType="centerCrop"
    android:src="@drawable/men"
    app:layout_constraintStart_toStartOf="@+id/textView20"
    app:layout_constraintTop_toBottomOf="@+id/textView20" />

<TextView
    android:id="@+id/textView21"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="16dp"
    android:text="@string/lorem_person_description"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@+id/imageView10"
    app:layout_constraintTop_toBottomOf="@+id/imageView10" />

</androidx.constraintlayout.widget.ConstraintLayout>